// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders page section correctly with a title 1`] = `
<div
  className="section"
>
  <h1
    className="title"
  >
    Example
  </h1>
  <div
    className="page-container"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
      <span
        className="highlighted"
      >
        sed do eiusmod tempor incididunt ut
      </span>
       labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    </p>
  </div>
</div>
`;

exports[`renders page section correctly without a title 1`] = `
<div
  className="section"
>
  <div
    className="page-container"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
      <span
        className="highlighted"
      >
        sed do eiusmod tempor incididunt ut
      </span>
       labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    </p>
  </div>
</div>
`;
